# lbnl-climate-resilience

./: .gitignore  DESCRIPTION.md  MANIFEST.in  README.md  requirements.txt  requirements.yaml  requirements_with_versions.yaml  setup.cfg  setup.py
data/: LM_sites_with_geography.csv  LM_sites_with_lat_lon.csv  LMsites.csv  LMsites.json  LMsites_pr1.csv  pr_four_periods.csv
docs/: .readthedocs.yaml  environment.txt  requirements.txt
docs/source/: conf.py  constants.rst  downloader.rst  index.rst  preprocess.rst  visualize.rst
examples/climate-resilience/notebooks/: map.html  sample_map.html  scratch.ipynb  visualize_example_1.ipynb  visualize_example_2.ipynb  visualize_example_3.ipynb
examples/climate-resilience/scripts/: README.md  download_example.py  download_params.yml  preprocess_example.py
notebooks/climate-resilience/: scratch.ipynb  visualize_example_1.ipynb  visualize_example_2.ipynb  visualize_example_3.ipynb
src/climate_resilience/: bias_correction.py  constants.py  downloader.py  preprocess.py  visualize.py
src/zexuan_pkg/: README.md  constants.py  download_params.yml  downloader.py  preprocess.py  preprocess_example.py  preprocessing_scratch.py  scratch.ipynb  scratch.py  utils.py  visualize.py  visualize_example.ipynb  visualize_example_1.ipynb  visualize_example_2.ipynb
