[metadata]
name = climate-resilience-sap89750
version = 0.1.5
author = Satyarth
author_email = satyarth@lbl.gov
description = Download, Preprocessing, and Visualization code for climate resilience data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satyarth934/lbnl-climate-resilience
project_urls =
    Bug Tracker = https://github.com/satyarth934/lbnl-climate-resilience/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas
    seaborn
    matplotlib
    leafmap
    ipyleaflet
    tqdm
    geopandas
    earthengine-api
    eecmip5
    joblib


[options.packages.find]
where = src